# comaps

./: .gitignore  CMakeLists.txt  README.md  configure.sh  defines.hpp  private.h
.forgejo/workflows/: android-check-metadata.yaml  android-release-metadata.yaml  dco.yml  ios-beta.yaml  ios-check.yaml  ios-release.yaml  linux-check.yaml  macos-check.yaml
.github/workflows/: android-build-sdk-aar.yaml  android-build-sdk-debug-aar.yaml  android-check.yaml  build-sdk-and-examples.yml  ios-check.yaml
android/app/: .gitignore  build.gradle
android/gradle/: libs.versions.toml
android/sdk/: build.gradle
data/: categories.txt  categories_cuisines.txt  copyright.html  countries.txt  editor.config  faq.html  mapcss-mapping.csv  replaced_tags.txt
dev_sandbox/: CMakeLists.txt
docs/: CONTRIBUTING.md  CPP_STYLE.md  INSTALL.md  INSTALL_DESKTOP.md  PR_GUIDE.md  QT_CREATOR.md  STYLES.md  TRANSLATIONS.md
generator/: CMakeLists.txt  address_enricher.cpp  addresses_collector.cpp  collector_boundary_postcode.cpp  collector_camera.cpp  collector_mini_roundabout.cpp  collector_routing_city_boundaries.cpp  feature_builder.cpp  final_processor_cities.cpp  final_processor_coastline.cpp  final_processor_complex.cpp  final_processor_country.cpp  final_processor_world.cpp  metalines_builder.cpp  osm2meta.cpp  osm2meta.hpp  osm2type.cpp  raw_generator.cpp  restriction_writer.cpp  road_access_generator.cpp  road_penalty_generator.cpp  search_index_builder.cpp
libs/: CMakeLists.txt
libs/shaders/shaders_tests/: CMakeLists.txt
qt/: CMakeLists.txt  place_page_dialog_user.cpp
(+936 files in other folders)
